 [package]
name = "rust-project-esp32"
version = "0.1.0"
authors = ["lampaBiurkowa (Cargo.toml taken from example by Sergio Gasquez <sergio.gasquez@gmail.com>)"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"
debug = true    # Symbols are nice and they don't increase the size on Flash

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

std = ["esp-idf-svc/alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.1", default-features = false }

[build-dependencies]
embuild = "0.31.4"
